[metadata]
name = xarg-python
version = attr: xarg.__version__
keywords = command, command-line, argparse, xarg
description = Simple command-line tool based on argparse.
author = Mingzhe Zou
author_email = zoumingzhe@outlook.com
url = https://github.com/bondbox/xarg-python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
project_urls =
    Source Code = https://github.com/bondbox/xarg-python
    Bug Tracker = https://github.com/bondbox/xarg-python/issues
    Documentation = https://github.com/bondbox/xarg-python

[options]
zip_safe = True
include_package_data = True
python_requires = >=3.8
install_requires =
    argcomplete >= 3.2.1
    tabulate
packages = find:

[options.entry_points]
console_scripts =
    xargcomplete = xarg.complete:main

[options.packages.find]
where = .
include = xarg
exclude = xarg.test
