[metadata]
keywords = command, command-line, argparse, xarg
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True
install_requires =
    argcomplete >= 3.2.1
    colorama
    tabulate

[options.entry_points]
console_scripts =
    xargcomplete = xarg.complete:main
